--- a/Day 24/Description
+++ b/Day 24/Description
@@ -1,7 +1,7 @@
 Topic: Doubly Linked List
 Question: Create a Doubly linked list and perform insertion, deletetion & display.
 
-In this program we create a singly circular linked list 
+In this program we create a Doubly Linked List
 
 What is Doubly linked list ?
 
